--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Lenovo/Downloads/pdfbox-app-3.0.0-alpha3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
